# roadef12-common

./: .gitignore  .hgignore  .hgtags  .travis.yml  CMakeLists.txt  CODINGSTYLE  COPYING  ChangeLog  Doxyfile.in  README  README.md  autogen.sh
configs/: Debug.conf  RelWithDebInfo.conf  Release.conf
example/: CMakeLists.txt  ExampleMain.cpp
roadef11-common/: CMakeLists.txt  ExampleMain.cpp  Types.hpp
roadef11-common/commands/: FileParser.hpp  ProcessMigration.hpp
roadef11-common/objects/: Assignment.hpp  Parameters.hpp
roadef11-common/objects/model/: GeneralCosts.hpp  Machines.hpp  Processes.hpp  Resources.hpp  Services.hpp
roadef11-common/service/: ProgramOptions.hpp  Service.hpp  ServiceExceptions.hpp
roadef11-common/util/: Util.hpp
roadef11-material/: submission.txt
roadef11-material/solution_checker/: solution_checker_run.cc
roadef12-common/: CMakeLists.txt  Types.hpp  config.h.in
roadef12-common/commands/: FileParser.hpp
roadef12-common/objects/: Assignment.hpp  Parameters.hpp
roadef12-common/objects/model/: GeneralCosts.hpp  Machines.hpp  Processes.hpp  Resources.hpp  Services.hpp
roadef12-common/service/: ProgramOptions.hpp  Service.hpp  ServiceExceptions.hpp
roadef12-common/util/: Util.hpp
roadef12-material/: README
roadef12-material/solution_checker/: solution_checker.cc  solution_checker.h  solution_checker_run.cc
scripts/: FindGLOG.cmake  FindRoadef11Common.cmake  Roadef11CommonConfig.cmake.in  add_test_suite.cmake  all_metrics.sh  autotest-cpp.cmake  autotest-cpp.sh  doxytest.sh  mean.rb  roadef11-common-config.cmake.in  roadef12-common-config.cmake.in
tests/: ExampleMain.cpp  MainTest.cpp
tests/sanity/: SanityTest.cpp
